--- a/pages/Forms.html
+++ b/pages/Forms.html
@@ -15,18 +15,20 @@
 
       <div>
         <label for ="text">Type Text for First Name *</label>
-        <input type="text " id="text" name="text" required>
+        <input type="text" id="text" name="text" required>
         <error-output class="text-error"></error-output>
     </div>
 
       <div>
         <label for ="pwd">Type password *</label>
-        <input type="password " id="pwd" name="pwd" required>
+        <input type="password" id="pwd" name="pwd" required>
+        <error-output class="password-error"></error-output>
       </div>
 
       <div>
         <label for ="email">EmailId </label>
-        <input type="email " id="email" name="email" placeholder="Email">
+        <input type="email" id="email" name="email" placeholder="Email">
+        <error-output class="email-error" for="email"></error-output>
       </div>
 
       <div>
@@ -36,24 +38,25 @@
 
       <div>
         <label for ="tel">Mobile number </label>
-        <input type="tel " id="tel" name="tel">
+        <input type="tel" id="tel" name="tel">
+        <error-output class="tel-error"></error-output>
       </div>
 
       <div>
         <label for ="search">Search type </label>
-        <input type="search " id="search" name="search">
+        <input type="search" id="search" name="search">
       </div>
 
       <div class="nativeDatePicker">
         <label for ="date">Select date </label>
-        <input type="date " id="date" name="date">
+        <input type="date" id="date" name="date">
          <span class="validity"></span>
     </div>
 
     <div >
         <label for ="salary">Choose your Salary </label>
         <input type="range" id="salary" name="salary"
-          min ="300000" max=" 800000" step="100" value="400000">
+          min ="300000" max="800000" step="100" value="400000">
         <output class ="salary-output" for ="salary">400000</output>
         </div>
 
@@ -74,13 +77,41 @@
         textError.textContent = "Name is incorrect"
     }
     });
+        let email = document.querySelector('#email');//UC2
+        let emailError = document.querySelector('.email-error');
+        email.addEventListener('input', function() {
+            let emailRegex = RegExp('^[a-z0-9]{3,}+([_+-.][a-z0-9]{3,}+)*@[a-z0-9]+.[a-z]{2,3}+(.[a-z]{2,3}){0,1}$');
+            if (emailRegex.test(email.value)) {
+            emailError.textContent= "";
+            } else {
+                emailError.textContent = "Email is Incorrect";
+            }
+        });
+        let tel = document.querySelector('#tel'); // UC3
+        let telError = document.querySelector('.tel-error');
+        number.addEventListener('input', function() {
+            let telRegex = RegExp('^[0-9]{2}[ ]{1}[0-9]{10}$');
+            if (telRegex.test(tel.value)) {
+            telError.textContent="";
+            } else {
+                telError.textContent = "Tel is Incorrect";
+        }
+        });
+        let password = document.querySelector('#password');     //UC4
+        let passwordError = document.querySelector('.password-error');
+        password.addEventListener( 'input', function() {
+            let passwordRegex = RegExp('^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*()]).{8,}$');
+            if (passwordRegex.test(password.value)) {
+            passwordError.textContent="";
+            } else { passwordError.textContent = "Password is Incorrect";
+        }
+        });
 
    let salary = document.querySelector('#salary');
    let output = document.querySelector('.salary-output');
    output.textContent = salary.value;
-
-
-   salary.oninput=function(){
+   salary.oninput=function()
+   {
        output.textContent = salary.value;
    }
   
