--- a/pages/Forms.html
+++ b/pages/Forms.html
@@ -9,26 +9,26 @@
 </head>
 <body>
     <form onsubmit="save()">
-       <header class ="headerConatiner">
+       <header class ="headerContainer">
            <h1>Form</h1>
        </header>
 
       <div>
-        <label for ="text">Type Text for First Name *</label>
+        <label for ="text">Type First Name *</label>
         <input type="text" id="text" name="text" required>
         <error-output class="text-error"></error-output>
     </div>
 
       <div>
         <label for ="pwd">Type password *</label>
-        <input type="password" id="pwd" name="pwd" required>
+        <input type="password" id="password" name="password" required>
         <error-output class="password-error"></error-output>
       </div>
 
       <div>
         <label for ="email">EmailId </label>
         <input type="email" id="email" name="email" placeholder="Email">
-        <error-output class="email-error" for="email"></error-output>
+        <error-output class="email-error"></error-output>
       </div>
 
       <div>
@@ -68,7 +68,7 @@
         let text = document.querySelector('#text');
         let textError=document.querySelector('.text-error');
      
-    text.addEventListener('input', function(){
+    text.addEventListener('input', function() {
     let nameRegex = RegExp('^[A-Z]{1}[a-z]{2,}$') // UC1
     if (nameRegex.test(text.value)) {
         textError.textContent = "";
@@ -77,43 +77,43 @@
         textError.textContent = "Name is incorrect"
     }
     });
-        let email = document.querySelector('#email');//UC2
-        let emailError = document.querySelector('.email-error');
-        email.addEventListener('input', function() {
-            let emailRegex = RegExp('^[a-z0-9]{3,}+([_+-.][a-z0-9]{3,}+)*@[a-z0-9]+.[a-z]{2,3}+(.[a-z]{2,3}){0,1}$');
-            if (emailRegex.test(email.value)) {
-            emailError.textContent= "";
-            } else {
-                emailError.textContent = "Email is Incorrect";
-            }
-        });
-        let tel = document.querySelector('#tel'); // UC3
-        let telError = document.querySelector('.tel-error');
-        number.addEventListener('input', function() {
-            let telRegex = RegExp('^[0-9]{2}[ ]{1}[0-9]{10}$');
-            if (telRegex.test(tel.value)) {
-            telError.textContent="";
-            } else {
-                telError.textContent = "Tel is Incorrect";
-        }
-        });
-        let password = document.querySelector('#password');     //UC4
+    let password = document.querySelector('#password');     //UC4
         let passwordError = document.querySelector('.password-error');
         password.addEventListener( 'input', function() {
             let passwordRegex = RegExp('^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*()]).{8,}$');
             if (passwordRegex.test(password.value)) {
-            passwordError.textContent="";
+                passwordError.textContent = "";
             } else { passwordError.textContent = "Password is Incorrect";
         }
         });
+        let email = document.querySelector('#email');//UC2
+        let emailError = document.querySelector('.email-error');
+        email.addEventListener('input', function() {
+          let emailRegex = RegExp('^[a-zA-Z]+[a-zA-Z0-9]*[- . + _]?[a-zA-Z0-9]+[@]{1}[a-z0-9]+[.]{1}[a-z]+[.]?[a-z]+$');
+            if (emailRegex.test(email.value)) {
+            emailError.textContent = "";
+            } else {
+                emailError.textContent = "Email is Incorrect";
+            }
+        });
+        let tele = document.querySelector('#tel'); // UC3
+        let telError = document.querySelector('.tel-error');
+        tele.addEventListener('input', function() {
+            let telRegex = RegExp('^[0-9]{1,2}\\s{1}[7-9]{1}[0-9]{9}$');
+            if (telRegex.test(tele.value)) {
+            telError.textContent="";
+            } else {
+                telError.textContent = "Number is Incorrect";
+        }
+        });
+       
 
-   let salary = document.querySelector('#salary');
-   let output = document.querySelector('.salary-output');
-   output.textContent = salary.value;
-   salary.oninput=function()
-   {
-       output.textContent = salary.value;
-   }
+        let salary = document.querySelector('#salary');
+        let output = document.querySelector('.salary-output');
+        output.textContent = salary.value;
+        salary.addEventListener('input', function() {
+            output.textContent = salary.value;
+        });
   
    function save(){
        alert("Form created successfully");
